--- a/packages/theme-chalk/src/radio.scss
+++ b/packages/theme-chalk/src/radio.scss
@@ -21,7 +21,7 @@
   outline: none;
   font-size: var(--el-font-size-base);
   user-select: none;
-  margin-right: 30px;
+  margin-right: 32px;
   height: map.get($radio-height, 'default');
   user-select: none;
 
@@ -32,7 +32,9 @@
   }
 
   @include when(bordered) {
-    padding: map.get($radio-bordered-padding, 'default');
+    padding: 0 map.get($checkbox-bordered-padding-right, 'default')-$border-width-base
+      0 map.get($checkbox-bordered-padding-left, 'default')-$border-width-base;
+
     border-radius: var(--el-border-radius-base);
     border: var(--el-border-base);
     box-sizing: border-box;
@@ -46,13 +48,12 @@
       border-color: var(--el-border-color-lighter);
     }
 
-    & + .#{$namespace}-radio.is-bordered {
-      margin-left: 10px;
-    }
-
     @each $size in (large, small) {
       &.#{$namespace}-radio--#{$size} {
-        padding: map.get($radio-bordered-padding, $size);
+        padding: 0
+          map.get($checkbox-bordered-padding-right, $size)-$border-width-base
+          0
+          map.get($checkbox-bordered-padding-left, $size)-$border-width-base;
         border-radius: var(--el-border-radius-base);
 
         .#{$namespace}-radio__label {
